# 1stIT_Test

./: README.md  pyproject.toml
backend/: pytest.ini
backend/api/v1/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/money/: admin.py  apps.py  models.py
backend/money/migrations/: 0001_initial.py  0002_alter_transaction_amount.py
